src/tests/evaluation_error/type_mismatch_multiply_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_multiply_infix_expression__test_type_mismatch_multiply_infix_expression_case_3_syntax_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_multiply_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: MultiplyInfix {
            left_hand: Boolean {
                literal: false,
            },
            right_hand: String {
                literal: "can't multiply",
            },
        },
    },
]
