src/tests/evaluation_error/type_mismatch_multiply_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_multiply_infix_expression__test_type_mismatch_multiply_infix_expression_case_5_lexical_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_multiply_infix_expression/mod.rs
expression: tokens
---
[
    Integer {
        literal: 12,
    },
    Multiply,
    String {
        literal: "muliply",
    },
    EndOfFile,
]
